--- a/src/styles/SubModelingStyle.css
+++ b/src/styles/SubModelingStyle.css
@@ -4,7 +4,6 @@
 
 .planSub {
     width: 1280px;
-    /* height: 100px; */
     display: flex;
     font-size: 7.7pt;
     letter-spacing: 0.3px;
@@ -78,6 +77,7 @@
 }
 
 /* .eyeLists .workSpace .eyeSmall, */
+.planSub .eyeContents li .eyeSmall p:hover,
 .planSub .eyeContents li .eyeSmall p.iconOn {
     border: 1px solid orange;
     background-color: rgb(27, 27, 27);
