--- a/src/styles/SubSelectStyle.css
+++ b/src/styles/SubSelectStyle.css
@@ -1,7 +1,7 @@
 .rightSelect {
-    width: 350px;
+    width: 400px;
     position: absolute;
-    right: 400px;
+    right: 390px;
     top: 35px;
     box-sizing: border-box;
     display: flex;
@@ -9,7 +9,8 @@
 }
 
 .rightSelect select {
-    /* width: 100%; */
+    width: 100%;
+    /* width: 80%; */
     border: 2px solid rgb(26, 26, 26);
     background-color: rgb(48, 48, 48);
     outline: none;
